--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: czsu-multi-agent-backend
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python -m uvicorn api_server:app --host 0.0.0.0 --port $PORT --log-level info
+    startCommand: python -m uvicorn api.main:app --host 0.0.0.0 --port $PORT --log-level info
     plan: free  # or starter/standard depending on your plan
     healthCheckPath: /health
