--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,11 +130,9 @@ dev = [
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-packages = ["czsu-multi-agent-text-to-sql"]
-
-[tool.setuptools.package-dir]
-"czsu-multi-agent-text-to-sql" = "czsu-multi-agent-text-to-sql"
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["api*", "tests*", "my_agent*", "data*", "metadata*"]
 
 [tool.setuptools.package-data]
-"*" = ["**/*"]
+"*" = ["*.py", "*.txt", "*.md", "*.json", "*.yaml", "*.yml", "*.toml", "*.cfg", "*.ini"]
