--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
     "langchain-text-splitters==0.3.8",
     "langgraph>=0.2.0",
     "langgraph-checkpoint==2.0.26",
-    "langgraph-checkpoint-postgres>=2.0.0",
+    "langgraph-checkpoint-postgres==2.0.21",
     "langsmith==0.3.34",
     "langchain-anthropic>=0.1.0",
     
