--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ langchain-community>=0.0.10
 langchain-text-splitters==0.3.8
 langgraph>=0.2.0
 langgraph-checkpoint==2.0.26
-langgraph-checkpoint-postgres>=2.0.0
+langgraph-checkpoint-postgres==2.0.21
 langsmith==0.3.34
 langchain-anthropic>=0.1.0
 
