--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,11 @@
   },
   "dependencies": {
     "idb": "^7.1.1",
+    "markdown-to-jsx": "^7.7.12",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^9.1.0",
-    "remark-gfm": "^4.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
