--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ openai==1.82.1
 
 # ChromaDB for vector search
 chromadb==1.1.1
-onnxruntime>=1.14.1
+onnxruntime==1.15.0
 
 # Cohere for reranking
 cohere==5.15.0
