--- a/railway.toml
+++ b/railway.toml
@@ -14,7 +14,8 @@ buildCommand = "python -m pip install -r requirements.txt && python unzip_files.
 [deploy]
 # Start command to run the application with uvicorn
 # Railway provides $PORT environment variable dynamically
-startCommand = "uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+# Using python -m to run uvicorn from RAILPACK's venv
+startCommand = "python -m uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 
 # Restart policy when deployment crashes
 restartPolicyType = "ON_FAILURE"
