--- a/railway.toml
+++ b/railway.toml
@@ -21,7 +21,7 @@ RAILPACK_DEPLOY_APT_PACKAGES = "libsqlite3-0"
 # Start command to run the application with uvicorn
 # Railway provides $PORT environment variable dynamically
 # Using python -m to run uvicorn from RAILPACK's venv
-startCommand = "python -m uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+startCommand = "uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 
 # Restart policy when deployment crashes
 restartPolicyType = "ON_FAILURE"
