--- a/railway.toml
+++ b/railway.toml
@@ -12,16 +12,15 @@ buildCommand = "python -m pip install -r requirements.txt && python unzip_files.
 # watchPatterns = ["**"]
 
 [deploy]
+# Start command to run the application with uvicorn
+# Railway provides $PORT environment variable dynamically
+startCommand = "python -m uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+
 # Environment variables for Railpack to install system packages
 # https://railpack.com/guides/installing-packages
 [deploy.environmentVariables]
 # Install SQLite3 library at runtime (needed by Python's sqlite3 module)
 RAILPACK_DEPLOY_APT_PACKAGES = "libsqlite3-0"
-
-# Start command to run the application with uvicorn
-# Railway provides $PORT environment variable dynamically
-# Using python -m to run uvicorn from RAILPACK's venv
-startCommand = "uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 
 # Restart policy when deployment crashes
 restartPolicyType = "ON_FAILURE"
