--- a/railway.toml
+++ b/railway.toml
@@ -6,7 +6,7 @@
 builder = "RAILPACK"
 
 # Build command to run
-buildCommand = "python -m pip install -r requirements.txt && python unzip_files.py && rm -f data/*.zip"
+buildCommand = "curl -LsSf https://astral.sh/uv/install.sh | sh && uv pip install . && uv pip install .[dev] && python unzip_files.py && rm -f data/*.zip"
 
 # Watch patterns for conditional deploys (optional)
 # watchPatterns = ["**"]
