--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dependencies = [
     "SQLAlchemy>=2.0.23",
     "asyncpg>=0.29.0",
     "alembic==1.15.2",
+    "libsql-client>=0.3.1",
     
     # Authentication
     "authlib==1.5.2",
