--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,11 @@
     "markdown-to-jsx": "^7.7.12",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "uuid": "^11.1.0",
-    "nodemailer": "^7.0.7"
+    "swagger-ui-react": "^5.30.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
