--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,4 +1,5 @@
 {
+  "nodeVersion": "18",
   "rewrites": [
     {
       "source": "/api/analyze",
@@ -68,5 +69,10 @@
       "source": "/api/((?!auth).*)",
       "destination": "https://czsu-multi-agent-backend-production.up.railway.app/$1"
     }
-  ]
+  ],
+  "functions": {
+    "src/app/docs/page.tsx": {
+      "maxDuration": 10
+    }
+  }
 }
