--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "idb": "^7.1.1",
-    "markdown-to-jsx": "^7.7.12",
+    "katex": "^0.16.25",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "nodemailer": "^7.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "swagger-ui-react": "^5.30.2",
     "uuid": "^11.1.0"
   },
