--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,10 @@ dependencies = [
     # Cohere for reranking
     "cohere==5.15.0",
     
+    # Google Gemini
+    "google-genai>=0.1.0",
+    "langchain-google-genai>=3.1.0",
+    
     # PostgreSQL database
     "psycopg[binary,pool]>=3.1.13",
     "psycopg-pool==3.2.6",
