--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,16 +27,17 @@ dependencies = [
     "pydantic>=2.5.0",
     
     # LangChain ecosystem (core)
-    "langchain>=0.3.0",
-    "langchain-core>=0.3.0",
-    "langchain-openai>=0.0.2",
-    "langchain-community>=0.3.28",
-    "langchain-ollama>=1.0.1",  # OLLAMA integration with proper tool calling support
-    "langchain-anthropic==1.3.0",
-    "langgraph>=0.2.0",
-    "langgraph-checkpoint>=2.1.0",
-    "langgraph-checkpoint-postgres>=2.0.21",
-    "langsmith>=0.3.45",
+    "langchain>=1.2.0",
+    "langchain-core>=1.2.2",
+    "langchain-openai>=1.1.5",
+    "langchain-community>=0.4.1",
+    "langchain-ollama>=1.0.1",
+    "langchain-anthropic>=1.3.0",
+    "langchain_xai>=1.1.0",
+    "langgraph>=1.0.5",
+    "langgraph-checkpoint>=3.0.1",
+    "langgraph-checkpoint-postgres>=3.0.2",
+    "langsmith>=0.5.0",
     
     # OpenAI and Azure OpenAI
     "openai>=1.108.1,<2",
@@ -48,7 +49,8 @@ dependencies = [
     "cohere==5.15.0",
     
     # Google Gemini
-    "langchain-google-genai>=3.1.0",
+    "langchain-google-genai>=4.1.1",
+    "langchain-groq>=1.1.1",
     
     # PostgreSQL database
     "psycopg[binary,pool]>=3.1.13",
@@ -58,7 +60,7 @@ dependencies = [
     "PyJWT[crypto]>=2.8.0",
     
     # Essential utilities
-    "python-dotenv>=1.0.0",
+    "python-dotenv>=1.2.1",
     "requests>=2.31.0",
     "tqdm==4.67.1",
     "tenacity>=8.2.0",
